--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ p {
         var php = 100; //given value in peso
       
 
-        document.write("<h4>Click the currencies below to convert</h4> <br>" + "<kbd>" + 100 + "</kbd>" + "<h4> <br> pesos to other currencies</h4>"); 
+        document.write("<h4>Click the buttons below to convert</h4> <br>" + "<kbd>" + 100 + "</kbd>" + "<h4> <br> pesos to other currencies</h4>"); 
 
         </script>
     </div>
